--- a/src/renderer/css/index.css
+++ b/src/renderer/css/index.css
@@ -25,10 +25,10 @@ html {
 }
 #console {
 	width: 200px;
-	height: 200px;
 	background: none;
 	position: fixed;
-	bottom: 0px;
+	bottom: 50px;
 	right: 0px;
-	color: red;
+	color: #4386f5;
+	font-size: 10px;
 }
