--- a/src/renderer/css/index.css
+++ b/src/renderer/css/index.css
@@ -24,13 +24,14 @@ html {
 	background: rgba(0, 0, 0, 0.3) !important;
 }
 #console {
-	width: 200px;
+	display: inline-block;
 	background: none;
 	position: fixed;
 	bottom: 50px;
 	right: 0px;
 	color: #4386f5;
 	font-size: 10px;
+	max-width: 50%;
 }
 #console>div {
 	margin-bottom: 20px;
