--- a/src/renderer/css/index.css
+++ b/src/renderer/css/index.css
@@ -28,10 +28,11 @@ html {
 	background: none;
 	position: fixed;
 	bottom: 50px;
-	right: 0px;
+	right: 10px;
 	color: #4386f5;
 	font-size: 10px;
 	max-width: 50%;
+	word-break: break-all;
 }
 #emotion {
 	display: inline-block;
